compiler/tests/err-struct-undef.err.expect
tests/err-struct-undef.c:2:12: error: undefined struct 'Foo'
