compiler/tests/err-struct-undef.c
int main() {
    struct Foo f;
    return 0;
}
